Nesting requestClose() fires multiple cancel events https://bugs.webkit.org/show_bug.cgi?id=311741

Reviewed by Anne van Kesteren.

Adds a flag to dialog elements that is set when calling requestClose(), this causes an early return if already set so that authors can't accidentally create a RangeError due to looping.

* LayoutTests/imported/w3c/web-platform-tests/html/semantics/interactive-elements/the-dialog-element/dialog-requestclose-recurse-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/html/semantics/interactive-elements/the-dialog-element/dialog-requestclose-recurse.html: Added.
* Source/WebCore/html/HTMLDialogElement.cpp:
(WebCore::HTMLDialogElement::requestClose):
* Source/WebCore/html/HTMLDialogElement.h:

Canonical link: https://commits.webkit.org/313239@main